feat(health): Report inbound connector health (#617)
* feat(health): Report inbound connector health

* Refine collection handling

* Webhooks are UP by default.

* Webhooks are UP by default.