@@ -16,15 +16,10 @@
  */
 package io.camunda.connector.runtime.inbound.lifecycle;
 
-import io.camunda.connector.impl.inbound.InboundConnectorProperties;
+import io.camunda.connector.api.inbound.Health;
 import io.camunda.connector.runtime.inbound.webhook.WebhookConnectorProperties;
 import io.camunda.connector.runtime.inbound.webhook.WebhookConnectorRegistry;
-import java.util.ArrayList;
-import java.util.Collection;
-import java.util.Collections;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
+import java.util.*;
 import java.util.stream.Collectors;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestParam;
@@ -42,66 +37,31 @@ public class InboundConnectorRestController {
   @GetMapping("/inbound")
   public List<ActiveInboundConnectorResponse> getActiveInboundConnectors(
       @RequestParam(required = false) String bpmnProcessId,
-      @RequestParam(required = false) String type,
-      @RequestParam(required = false) String elementId) {
-
-    var activeConnectors = inboundManager.getActiveConnectorsByBpmnId();
-    var filteredByBpmnProcessId = filterByBpmnProcessId(activeConnectors, bpmnProcessId);
-    var filteredByType = filterByConnectorType(filteredByBpmnProcessId, type);
-    var filteredByElementId = filterByElementId(filteredByType, elementId);
-
-    // TODO: replace this with a general solution
-    // e.g. consider an optional method in InboundConnectorExecutable that returns data to be shown
-    // in Modeler
-    return filteredByElementId.stream()
-        .map(
-            properties ->
-                new ActiveInboundConnectorResponse(
-                    properties.getBpmnProcessId(),
-                    properties.getElementId(),
-                    properties.getType(),
-                    extractPublicConnectorData(properties)))
-        .collect(Collectors.toList());
+      @RequestParam(required = false) String elementId,
+      @RequestParam(required = false) String type) {
+    var result =
+        inboundManager.query(new ActiveInboundConnectorQuery(bpmnProcessId, elementId, type));
+    return result.stream().map(this::mapToResponse).collect(Collectors.toList());
   }
 
-  private List<InboundConnectorProperties> filterByBpmnProcessId(
-      Map<String, Set<InboundConnectorProperties>> connectors, String bpmnProcessId) {
-    if (bpmnProcessId != null) {
-      Set<InboundConnectorProperties> connectorsForBpmnId = connectors.get(bpmnProcessId);
-      if (connectorsForBpmnId == null) {
-        return Collections.emptyList();
-      }
-      return new ArrayList<>(connectors.get(bpmnProcessId));
-    }
-    return connectors.values().stream().flatMap(Collection::stream).collect(Collectors.toList());
-  }
-
-  private List<InboundConnectorProperties> filterByConnectorType(
-      List<InboundConnectorProperties> properties, String type) {
-    if (type == null) {
-      return properties;
-    }
-    return properties.stream()
-        .filter(props -> type.equals(props.getType()))
-        .collect(Collectors.toList());
-  }
-
-  private List<InboundConnectorProperties> filterByElementId(
-      List<InboundConnectorProperties> properties, String elementId) {
-
-    if (elementId == null) {
-      return properties;
-    }
-    return properties.stream()
-        .filter(props -> elementId.equals(props.getElementId()))
-        .collect(Collectors.toList());
-  }
-
-  private Map<String, Object> extractPublicConnectorData(InboundConnectorProperties properties) {
+  private ActiveInboundConnectorResponse mapToResponse(ActiveInboundConnector connector) {
+    var properties = connector.properties();
     if (WebhookConnectorRegistry.TYPE_WEBHOOK.equals(properties.getType())) {
       WebhookConnectorProperties webhookProps = new WebhookConnectorProperties(properties);
-      return Map.of("path", webhookProps.getContext());
+      return new ActiveInboundConnectorResponse(
+          properties.getBpmnProcessId(),
+          properties.getElementId(),
+          properties.getType(),
+          Map.of("path", webhookProps.getContext()),
+          Health.Status.UP);
+    } else {
+      var health = Optional.ofNullable(connector.context().getHealth());
+      return new ActiveInboundConnectorResponse(
+          properties.getBpmnProcessId(),
+          properties.getElementId(),
+          properties.getType(),
+          health.map(Health::getDetails).orElse(Collections.emptyMap()),
+          health.map(Health::getStatus).orElse(Health.Status.UNKNOWN));
     }
-    return null;
   }
 }
